# DSP_MLIR

./: .gitignore  Dockerfile  README.md
mlir/examples/dsp/SimpleBlocks/: CMakeLists.txt  CodeStructureHelper.txt  ReadMe.txt  dspMain.cpp  linAlgHelper.txt  llvm.ll  output10.s  toyc.cpp
mlir/examples/dsp/SimpleBlocks/Output/: .gitignore  MlirOptHelper.td  ScriptForExeFromll.sh  TosaHelper.td
mlir/examples/dsp/SimpleBlocks/Output/ExpectedOut/: FirFilter.td  FirFilter0.td  NotesAndErrors.td  TryAffine.td  TryIntermediateCode.cpp
mlir/examples/dsp/SimpleBlocks/Output/MultiIR/: input10_affine.mlir  input10_llvm.txt  input10_mlir_affine.td.code-workspace  input10_mlir_llvm.mlir  input10k_llvm.ll  input10k_llvm.txt  input3_mlir.mlir  input3_toy.mlir  mlir10.td  mlir10_affine.td  mlir10_affine.txt  simple1_affine.mlir  sub3_affine.mlir
mlir/examples/dsp/SimpleBlocks/Output/TryAffineAndMlirOpt/: TryYield.mlir  affine_loop_invariant_code_motion.mlir
mlir/examples/dsp/SimpleBlocks/Output/TryDSPApps/: DTMFToneDetection.py  FIRFilterHammingOpt.py  affine_fft1d_in.mlir  audio_equalizer1.mlir  audio_gain.py  audio_gain1.mlir  bandPass.py  delay2delay.py  echocancelling.py  fft1d.mlir  find_peaks.py  firdesign1.py  lowPassFull.py  lowPass_highPass.py  noisecancelling.py  noisecancelling_gain.py  periodogram.mlir  periodogram1.py  qam_demodulate.py  qam_modulate.py  signalSmooth1.py  target_identification.py  (+3 more)
mlir/examples/dsp/SimpleBlocks/mlir/: Dialect.cpp  LinalgToLLVM.cpp  LowerToAffineLoops.cpp  LowerToAffineLoops2.cpp  LowerToLLVM.cpp  LowerToTosa.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  TosaToLinalgPass.cpp  ToyCombine.cpp  ToyCombine.td
mlir/examples/dsp/SimpleBlocks/parser/: AST.cpp
(+350 files in other folders)
